--- a/thank-you.html
+++ b/thank-you.html
@@ -52,7 +52,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="logo.png" alt="Cuba Private Travel Logo">
+        <img src="image001.png" alt="Cuba Private Travel Logo">
         <h1>Thank You!</h1>
         <p>Your form has been successfully submitted.</p>
         <p>We will review your information and get back to you shortly.</p>
