--- a/thank-you.html
+++ b/thank-you.html
@@ -56,7 +56,7 @@
         <h1>Thank You!</h1>
         <p>Your form has been successfully submitted.</p>
         <p>We will review your information and get back to you shortly.</p>
-        <a class="button" href="/">Return to Homepage</a>
+        <a class="button" href="www.cubaprivatetravel.com">Return to Homepage</a>
     </div>
 </body>
 </html>
