--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
 <body>
     <img src="image001.png" alt="Logo">
     <form id="fam-form">
-        <label for="name">Name 12:</label>
+        <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required>
-        <label for="agency">Name of Agency:</label>
-        <input type="text" id="agency" name="agency" required>
+        <label for="agency">Agency/Personal Website:</label>
+        <input type="url" id="agency" name="agency" required>
 
         <label for="years">Number of Years working as an Adviser:</label>
         <input type="number" id="years" name="years" required>
