--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
         input[type="text"],
         input[type="number"],
-        input[type="email"],
+        input[type="email"]
+        input[type="url"],
         textarea,
         select {
             width: 100%;
@@ -70,7 +71,7 @@
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required>
         <label for="agency">Agency/Personal Website:</label>
-        <input type="url" id="agency" name="agency" required>
+        <input type="url" id="agency" name="agency"  placeholder="https://yourweb.com" required>
 
         <label for="years">Number of Years working as an Adviser:</label>
         <input type="number" id="years" name="years" required>
