--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         input[type="text"],
         input[type="number"],
-        input[type="email"]
+        input[type="email"],
         input[type="url"],
         textarea,
         select {
