--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required>
         <label for="agency">Agency/Personal Website:</label>
-        <input type="url" id="agency" name="agency"  placeholder="https://yourweb.com" required>
+        <input type="url" id="agency" name="agency" required>
 
         <label for="years">Number of Years working as an Adviser:</label>
         <input type="number" id="years" name="years" required>
